paragraph after spacing issue on superheros

--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -168,6 +168,7 @@
           h1, h2, p{
           color: @white;
           text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+          margin-bottom: 0;
           }
 
           a.uw-btn {
