--- a/style.css
+++ b/style.css
@@ -1752,6 +1752,7 @@ div.map-logo.wenatchee {
 .uw-homepage-slider-container .uw-homepage-slider.white-header-overlay p {
   color: #ffffff;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  margin-bottom: 0;
 }
 .uw-homepage-slider-container .uw-homepage-slider.white-header-overlay a.uw-btn:after {
   background-color: #85754d;
